feat(view+like): deliver basic view and like feature first
